[package]
name = "textedit-merge"
version = "0.2.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>"]
description = "A library for sorting and merging text edits."
readme = "README.md"
homepage = "https://github.com/mtoohey31/textedit-merge"
repository = "https://github.com/mtoohey31/textedit-merge"
license = "MIT OR Apache-2.0"
